prosseguimento da construcao do portfolio

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
 </head>
 <body>
   <h1>Rodrigo Rafael Freitas</h1><br>
-  <img src="Images/Rodrigo.jpg" alt="Foto de Rodrigo Rafael Freitas" width = "400px">    
+  <a href="/Images/Rodrigo.jpg"><img src="Images/Rodrigo.jpg" alt="Foto de Rodrigo Rafael Freitas" width = "400px"></a>    
   <p>Brasileiro, ex-bancário, residente em São João Batista - SC,<br>
-  recentemente iniciei estudos em programação web.</p>
-  
+  recentemente iniciei estudos em <em>programação web</em>.</p>
+  <ul>
+    <li><h4>Criativo</h4></li>
+    <li>Cooperativo</li>
+    <li>Agil</li>
+    <li>Objetivo</li>
+  </ul>
+
+  Indico o blog <a href="http://www.zoomdigital.com.br/" target="_blank">Zoom Digital</a>
+
 </body>
 </html>
