--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
 </head>
 <body>
   <h1>Rodrigo Rafael Freitas</h1><br>
+  
+  <h2>Sumario</h2>
+
+  <ol>
+  <li><a href="#Sobre mim">Sobre mim</a></li>
+  <li><a href="#Qualidades">Qualidades</a></li>
+  <li><a href="#Blogs e sites indicados">Blogs e sites indicados</a></li>
+  </ol>
+  
+
   <a href="/Images/Rodrigo.jpg"><img src="Images/Rodrigo.jpg" alt="Foto de Rodrigo Rafael Freitas" width = "400px"></a>    
+
+  <h2>Sobre mim</h2>
+
   <p>Brasileiro, ex-bancário, residente em São João Batista - SC,<br>
   recentemente iniciei estudos em <em>programação web</em>.</p>
+
+  <h2>Qualidades</h2>
+
   <ul>
     <li><h4>Criativo</h4></li>
     <li>Cooperativo</li>
@@ -16,7 +32,9 @@
     <li>Objetivo</li>
   </ul>
 
-  Indico o blog <a href="http://www.zoomdigital.com.br/" target="_blank">Zoom Digital</a>
+  <h2>Blogs e sites indicados</h2>
+
+  Indico o blog <a href="https://arstechnica.com/" target="_blank">Ars Technica</a>
 
 </body>
 </html>
